--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,5 @@ dependencies {
 	
 	testRuntime		('org.hsqldb:hsqldb:2.3.1')
 	testCompile		('org.springframework.boot:spring-boot-starter-test')
+	compile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
 }
