--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,9 @@ dependencies {
 	compile			('org.springframework.boot:spring-boot-starter-web')
 	compile 		('mysql:mysql-connector-java')
 	compile 		('net.sf.dozer:dozer:5.5.1')
-	//compile group: 'joda-time', name: 'joda-time', version: '2.9.4
+	compile group: 'org.json', name: 'json', version: '20160810'
+	
+	compile group: 'joda-time', name: 'joda-time', version: '2.9.4'
 	
 	testRuntime		('org.hsqldb:hsqldb:2.3.1')
 	testCompile		('org.springframework.boot:spring-boot-starter-test')
